[feature] Implementing special moves of the chess, En passant, Castiling and promotion.;