@@ -9,7 +9,6 @@ import java.util.Arrays;
 import java.util.InputMismatchException;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class UI {
 
@@ -110,16 +109,16 @@ public class UI {
     }
 
     private static void printCapturedPieces(List<ChessPieceEntity> list) {
-        List<ChessPieceEntity> listYellow =list.stream().filter(x -> x.getColor() == ColorEnum.YELLOW).collect(Collectors.toList());
+        List<ChessPieceEntity> listYellow =list.stream().filter(x -> x.getColor() == ColorEnum.YELLOW).toList();
         List<ChessPieceEntity> listBlue =
-                list.stream().filter(x -> x.getColor() == ColorEnum.BLUE).collect(Collectors.toList());
+                list.stream().filter(x -> x.getColor() == ColorEnum.BLUE).toList();
         System.out.println("Captured pieces: ");
         System.out.print(ColorEnum.YELLOW.getDesc() + ": ");
-        System.out.print(ANSI_BLUE);
+        System.out.print(ANSI_YELLOW);
         System.out.println(Arrays.toString(listYellow.toArray()));
         System.out.print(ANSI_RESET);
         System.out.print(ColorEnum.BLUE.getDesc() + ": ");
-        System.out.print(ANSI_YELLOW);
+        System.out.print(ANSI_BLUE);
         System.out.println(Arrays.toString(listBlue.toArray()));
         System.out.print(ANSI_RESET);
     }
